--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -76,6 +76,11 @@
       <plugin>
         <groupId>org.springframework.boot</groupId><artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+      <!-- Add the compiler plugin explicitly -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 </project>
