--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,19 @@
           <version>1.18.34</version>
           <scope>provided</scope>
         </dependency>
+        <!-- SLF4J API -->
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>2.0.12</version>
+        </dependency>
+
+        <!-- Logback (SLF4J implementation) -->
+        <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+          <version>1.5.6</version>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 
