--- a/user-service/src/test/resources/application-test.yml
+++ b/user-service/src/test/resources/application-test.yml
@@ -10,9 +10,13 @@ spring:
       ddl-auto: validate
   flyway:
     enabled: true
+    locations: classpath:db/migration
 logging:
   level:
     com.example.user: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql: TRACE
     org.springframework.transaction: DEBUG
+error:
+  include-message: always
+  include-stacktrace: always
