--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
     key-store: classpath:certs/keystore.jks
     key-store-password: user123
     key-store-type: JKS
-    trust-store: classpath:certs/keystone.jks
+    trust-store: classpath:certs/keystore.jks
     trust-store-password: user123
     trust-store-type: JKS
 
