--- a/admin-service/src/main/resources/application-local.yml
+++ b/admin-service/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/admin_db
     username: postgres
-    password: postgres
+    password: AhmadSajidSura2003
   jpa:
     hibernate:
       ddl-auto: validate
