--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>com.example</groupId>
     <artifactId>monorepo-spring-microservices</artifactId>
@@ -11,6 +11,7 @@
 
   <artifactId>admin-service</artifactId>
   <name>admin-service</name>
+
   <properties>
     <start-class>com.example.admin.AdminServiceApplication</start-class>
   </properties>
@@ -38,14 +39,13 @@
       <groupId>org.springdoc</groupId><artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
     </dependency>
 
-    <!-- Feign -->
+    <!-- Feign (version comes from Spring Cloud BOM) -->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-openfeign</artifactId>
-      <version>4.1.3</version>
     </dependency>
 
-    <!-- JWT via Spring Security Nimbus -->
+    <!-- JWT JOSE -->
     <dependency>
       <groupId>org.springframework.security</groupId><artifactId>spring-security-oauth2-jose</artifactId>
     </dependency>
@@ -69,6 +69,31 @@
     <dependency>
       <groupId>org.wiremock</groupId><artifactId>wiremock-standalone</artifactId><scope>test</scope>
     </dependency>
+
+    <!-- PostConst -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webflux</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.projectreactor.netty</groupId>
+      <artifactId>reactor-netty-http</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-oauth2-jose</artifactId>
+    </dependency>
+
+
   </dependencies>
 
   <build>
@@ -76,11 +101,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId><artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-      <!-- Add the compiler plugin explicitly -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-      </plugin>
+      <!-- Compiler plugin will inherit from root pluginManagement -->
     </plugins>
   </build>
 </project>
