--- a/admin-service/src/main/resources/application-local.yml
+++ b/admin-service/src/main/resources/application-local.yml
@@ -8,10 +8,16 @@ spring:
     url: jdbc:postgresql://localhost:5432/admin_db
     username: postgres
     password: AhmadSajidSura2003
+
   jpa:
     hibernate:
       ddl-auto: validate
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   flyway:
+    locations: classpath:db/migration
     enabled: true
 
 user-service:
@@ -19,3 +25,12 @@ user-service:
 
 s2s:
   audience: user-service
+
+jwt:
+  private-key-location: classpath:certs/jwt-private-pkcs8.pem
+  public-key-location: classpath:certs/jwt-public.pem
+  key-id: microservice-shared-key-id
+
+logging:
+  level:
+    com.example.admin: DEBUG
