--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.example</groupId>
-  <artifactId>monorepo-spring-microservices</artifactId>
-  <version>1.0.0</version>
-  <packaging>pom</packaging>
-
-  <name>monorepo-spring-microservices</name>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -18,25 +10,42 @@
     <relativePath/>
   </parent>
 
+
+  <groupId>com.example</groupId>
+  <artifactId>monorepo-spring-microservices</artifactId>
+  <version>1.0.0</version>
+  <packaging>pom</packaging>
+
   <modules>
     <module>user-service</module>
     <module>admin-service</module>
+    <module>key-generator</module>
   </modules>
 
   <properties>
     <java.version>17</java.version>
-    <jdk.version>17</jdk.version>
     <mapstruct.version>1.5.5.Final</mapstruct.version>
-    <jjwt.version>0.12.5</jjwt.version>
     <springdoc.version>2.6.0</springdoc.version>
     <testcontainers.version>1.19.8</testcontainers.version>
     <restassured.version>5.4.0</restassured.version>
     <wiremock.version>3.6.0</wiremock.version>
-    <maven.compiler.release>${java.version}</maven.compiler.release>
+
+    <!-- Use the Spring Cloud line compatible with Boot 3.3.x -->
+    <spring-cloud.version>2023.0.3</spring-cloud.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
+      <!-- Spring Cloud BOM (so module POMs don't pin Cloud deps individually) -->
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+      <!-- Test libs with centralized versions -->
       <dependency>
         <groupId>org.springdoc</groupId>
         <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -60,37 +69,28 @@
         <version>${wiremock.version}</version>
         <scope>test</scope>
       </dependency>
-      <dependency>
-        <groupId>org.projectlombok</groupId>
-          <artifactId>lombok</artifactId>
-          <version>1.18.34</version>
-          <scope>provided</scope>
-        </dependency>
-        <!-- SLF4J API -->
-        <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>2.0.12</version>
-        </dependency>
 
-        <!-- Logback (SLF4J implementation) -->
-        <dependency>
-          <groupId>ch.qos.logback</groupId>
-          <artifactId>logback-classic</artifactId>
-          <version>1.5.6</version>
-        </dependency>
+      <dependency>
+        <groupId>io.projectreactor</groupId>
+        <artifactId>reactor-bom</artifactId>
+        <version>2020.0.0</version> <!-- Replace with the latest stable version -->
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- Do NOT override slf4j/logback here; let Spring Boot manage logging -->
     </dependencies>
   </dependencyManagement>
 
   <build>
     <pluginManagement>
       <plugins>
+        <!-- Unified compiler + annotation processors for all modules -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.13.0</version>
           <configuration>
-            <release>${maven.compiler.release}</release>
+            <release>${java.version}</release>
             <parameters>true</parameters>
             <annotationProcessorPaths>
               <path>
@@ -103,7 +103,6 @@
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct.version}</version>
               </path>
-              <!-- optional but recommended when combining Lombok + MapStruct -->
               <path>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok-mapstruct-binding</artifactId>
@@ -112,21 +111,7 @@
             </annotationProcessorPaths>
           </configuration>
         </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-toolchain-plugin</artifactId>
-          <version>3.2.0</version>
-          <configuration>
-            <toolchains>
-              <jdk>
-                <version>17</version>
-                <vendor>any</vendor>
-              </jdk>
-            </toolchains>
-          </configuration>
-        </plugin>
       </plugins>
     </pluginManagement>
   </build>
-
 </project>
