--- a/user-service/src/main/resources/application-local.yml
+++ b/user-service/src/main/resources/application-local.yml
@@ -13,3 +13,7 @@ spring:
       ddl-auto: validate
   flyway:
     enabled: true
+jwt:
+  private-key-location: classpath:certs/jwt-private.pem
+  public-key-location: classpath:certs/jwt-public.pem
+  key-id: microservice-shared-key-id
