--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -14,7 +14,7 @@
   <name>user-service</name>
 
   <properties>
-    <start-class>com.example.user.UserServiceApplication</start-class>
+    <start-class>com.example.userEntity.UserServiceApplication</start-class>
   </properties>
 
   <dependencies>
@@ -91,6 +91,12 @@
     <artifactId>httpcore5</artifactId>
     <version>5.2.5</version> <!-- Or the latest stable version -->
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
