--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -47,9 +47,18 @@ admin-service:
 
 logging:
   level:
-    com.example.admin: DEBUG
-    org.springframework.web: DEBUG
-    org.springframework.web.servlet.DispatcherServlet: TRACE
+    com.example.user: DEBUG
+    com.example.user.application.service: INFO
+    com.example.user.infrastructure.security: DEBUG
     org.springframework.security: INFO
-    org.springframework.cloud.openfeign: DEBUG
-    feign: DEBUG
+    org.springframework.web: INFO
+    org.springframework.transaction: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level [%X{traceId:-},%X{spanId:-}] %logger{36} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level [%X{traceId:-},%X{spanId:-}] %logger{36} - %msg%n"
+  file:
+    name: logs/user-service.log
+    max-size: 100MB
+    max-history: 30
