--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -107,7 +107,18 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-pool2</artifactId>
     </dependency>
+    <!-- Observability / AOP for @Aspect weaving -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+    </dependency>
 
+    <!-- Micrometer Observation API (Spring Boot 3 already brings this transitively,
+         but keeping explicit to be crystal-clear) -->
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-observation</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
