--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,44 @@ services:
     ports:
       - "6379:6379"
     command: ["redis-server", "--save", "60", "1", "--loglevel", "warning"]
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"      # Minio API
+      - "9001:9001"      # Minio Console
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    networks:
+      - microservices-network
+  minio-init:
+    image: minio/mc:latest
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      sleep 10;
+      /usr/bin/mc config host add myminio http://minio:9000 minioadmin minioadmin;
+      /usr/bin/mc mb myminio/your-app-bucket;
+      /usr/bin/mc policy set public myminio/your-app-bucket;
+      exit 0;
+      "
+    networks:
+      microservices-network:
+
+    # Optional: Create buckets automatically
 volumes:
   postgres_data:
+    driver: local
+  minio_data:
     driver: local
 
