--- a/admin-service/src/main/resources/application.yml
+++ b/admin-service/src/main/resources/application.yml
@@ -39,10 +39,10 @@ spring:
 
 security:
   filter-chain:
-    permit-all-patterns: /api/public/**,/actuator/health,/swagger-ui/**,/v3/api-docs/**
+    permit-all-patterns: /v1/admin/login,/public/**,/actuator/health,/swagger-ui/**,/v3/api-docs/**
     admin-patterns: /api/admin/**
     authorities-claim-name: roles
-    authority-prefix: ROLE_
+    authority-prefix: "ROLE_"
   jwt:
     public-key: classpath:certs/jwt-public.pem
     private-key: classpath:certs/jwt-private.pem
@@ -62,13 +62,20 @@ s2s:
 
 admin:
   username: sajidadmin
-  passwordHash: $2a$12$EB/RgFp.HKGFn07snrIibu967XrJup4WxRF06BxLcfvcLcEmz8t2a
+  passwordHash: $2a$12$9ZXPV7CN5E6ikXzkk9hr8OnGy9W5TmmQHHKjrGnHVxFEfqNnmLrq2
 
 logging:
   level:
-    com.example.admin: DEBUG
+    com.microservices.admin: DEBUG
     org.springframework.web: DEBUG
-    org.springframework.web.servlet.DispatcherServlet: TRACE
-    org.springframework.security: INFO
-    org.springframework.cloud.openfeign: DEBUG
-    feign: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.security.web: TRACE
+    org.springframework.security.oauth2: DEBUG
+    org.springframework.security.access: DEBUG
+    com.microservices.admin.infrastructure.external: DEBUG
+    org.springframework.cloud.openfeign: DEBUG  # Add this
+    feign: DEBUG                                 # Add this
+    root: INFO
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
